Fixed punishment details display in dark mode

--- a/src/components/screens/wallet/delegatePerformance/styles.css
+++ b/src/components/screens/wallet/delegatePerformance/styles.css
@@ -24,10 +24,18 @@
 
     & .start {
       text-align: left;
+
+      & .details {
+        color: var(--color-maastricht-blue);
+      }
     }
 
     & .end {
       text-align: right;
+
+      & .details {
+        color: var(--color-maastricht-blue);
+      }
     }
   }
 
